--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@harryy/react-native-content-loader": "^0.3.3",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
@@ -25,9 +26,10 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-bootsplash": "^4.3.2",
+    "react-native-easy-content-loader": "^0.3.2",
     "react-native-gesture-handler": "^2.6.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-linear-gradient": "^2.6.2",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-responsive-screen": "^1.4.2",
