complete drawer ui

--- a/ios/SimpuMobile/Info.plist
+++ b/ios/SimpuMobile/Info.plist
@@ -59,7 +59,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>simpu-mobile</string>
+	<string>Simpu&#x2007;Go</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
