--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@harryy/react-native-content-loader": "^0.3.3",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/netinfo": "^9.3.1",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
+    "@reduxjs/toolkit": "^1.8.5",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "@ui-kitten/metro-config": "^5.1.2",
+    "accordion-collapse-react-native": "^1.1.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "deprecated-react-native-prop-types": "^2.3.0",
