--- a/ios/SimpuMobile/Info.plist
+++ b/ios/SimpuMobile/Info.plist
@@ -2,66 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-	<key>Item 0</key>
-		<string>AntDesign.ttf</string>
-		<key>Item 1</key>
-		<string>Entypo.ttf</string>
-		<key>Item 2</key>
-		<string>EvilIcons.ttf</string>
-		<key>Item 3</key>
-		<string>Feather.ttf</string>
-		<key>Item 4</key>
-		<string>FontAwesome.ttf</string>
-		<key>Item 5</key>
-		<string>FontAwesome5_Brands.ttf</string>
-		<key>Item 6</key>
-		<string>FontAwesome5_Regular.ttf</string>
-		<key>Item 7</key>
-		<string>FontAwesome5_Solid.ttf</string>
-		<key>Item 8</key>
-		<string>Foundation.ttf</string>
-		<key>Item 9</key>
-		<string>Ionicons.ttf</string>
-		<key>Item 10</key>
-		<string>MaterialIcons.ttf</string>
-		<key>Item 11</key>
-		<string>MaterialCommunityIcons.ttf</string>
-		<key>Item 12</key>
-		<string>SimpleLineIcons.ttf</string>
-		<key>Item 13</key>
-		<string>Octicons.ttf</string>
-		<key>Item 14</key>
-		<string>Zocial.ttf</string>
-		<key>Item 15</key>
-		<string>Averta-Bold-Italic.otf</string>
-		<key>Item 16</key>
-		<string>Averta-Bold.otf</string>
-		<key>Item 17</key>
-		<string>Averta-Regular-Italic.otf</string>
-		<key>Item 18</key>
-		<string>Averta-Regular.otf</string>
-		<key>Item 19</key>
-		<string>Averta-Semibold-Italic.otf</string>
-		<key>Item 20</key>
-		<string>Averta-Semibold.otf</string>
-		<key>Item 21</key>
-		<string>DMSans-Bold-Italic.ttf</string>
-	</array>
-	
-	<key>NSHumanReadableCopyright</key>
-	<string></string>
-	<key>CFBundleGetInfoString</key>
-	<string></string>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Simpu&#x2007;Go</string>
+	<string>SimpuGo</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleGetInfoString</key>
+	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -75,7 +23,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -89,19 +39,72 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Simpu requires access to your camera</string>
+	<key>NSHumanReadableCopyright</key>
+	<string></string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Simpu requires access to your gallery</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Item 0</string>
+		<string>AntDesign.ttf</string>
+		<string>Item 1</string>
+		<string>Entypo.ttf</string>
+		<string>Item 2</string>
+		<string>EvilIcons.ttf</string>
+		<string>Item 3</string>
+		<string>Feather.ttf</string>
+		<string>Item 4</string>
+		<string>FontAwesome.ttf</string>
+		<string>Item 5</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>Item 6</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>Item 7</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Item 8</string>
+		<string>Foundation.ttf</string>
+		<string>Item 9</string>
+		<string>Ionicons.ttf</string>
+		<string>Item 10</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Item 11</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>Item 12</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Item 13</string>
+		<string>Octicons.ttf</string>
+		<string>Item 14</string>
+		<string>Zocial.ttf</string>
+		<string>Item 15</string>
+		<string>Averta-Bold-Italic.otf</string>
+		<string>Item 16</string>
+		<string>Averta-Bold.otf</string>
+		<string>Item 17</string>
+		<string>Averta-Regular-Italic.otf</string>
+		<string>Item 18</string>
+		<string>Averta-Regular.otf</string>
+		<string>Item 19</string>
+		<string>Averta-Semibold-Italic.otf</string>
+		<string>Item 20</string>
+		<string>Averta-Semibold.otf</string>
+		<string>Item 21</string>
+		<string>DMSans-Bold-Italic.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDefault</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
