--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "deprecated-react-native-prop-types": "^2.3.0",
+    "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-bootsplash": "^4.3.2",
+    "react-native-device-info": "^10.2.1",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-responsive-screen": "^1.4.2",
@@ -44,8 +49,11 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.23.1",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
