--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,11 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+
+
+#what i just added
 # pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
 
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
