--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "generate-messages": "node scripts/generateMessages.js",
+    "prepare": "npm generate-messages"
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@flyerhq/react-native-chat-ui": "^1.4.3",
+    "@flyerhq/react-native-link-preview": "^1.6.0",
     "@harryy/react-native-content-loader": "^0.3.3",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/netinfo": "^9.3.1",
@@ -20,10 +24,10 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/react-native-modern-datepicker": "^1.0.1",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "@ui-kitten/metro-config": "^5.1.2",
-    "accordion-collapse-react-native": "^1.1.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "deprecated-react-native-prop-types": "^2.3.0",
@@ -32,18 +36,22 @@
     "react-native": "0.69.5",
     "react-native-bootsplash": "^4.3.2",
     "react-native-device-info": "^10.2.1",
+    "react-native-document-picker": "^8.1.2",
     "react-native-easy-content-loader": "^0.3.2",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.3.3",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
+    "react-native-select-dropdown": "^3.0.1",
     "react-native-svg": "^13.1.0",
     "react-native-swipe-action-list": "^0.0.6",
     "react-native-swipe-list-view": "^3.2.9",
