--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "baseUrl": ".",
     "paths": {
       "src/*": ["src/*"],
+      "@flyerhq/react-native-chat-ui": ["../src"]
     },
     "resolveJsonModule": true
   },
