--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,4 +52,8 @@ allprojects {
           maven { url 'https://maven.google.com' }
         maven { url 'https://www.jitpack.io' }
     }
+    //    configurations.all {
+    //     resolutionStrategy {
+    //         force 'com.facebook.react:react-native:0.63.4'
+    //     }}
 }
