added email cards/comments

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,12 +92,12 @@ apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = true
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore.
@@ -215,7 +215,7 @@ android {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
+            universalApk true  // If true, also generate a universal APK
             include (*reactNativeArchitectures())
         }
     }
@@ -288,6 +288,10 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // added this for pusher
+    //  implementation project(':pusher-websocket-react-native')
+    implementation 'com.pusher:pusher-java-client:2.4.4'
 }
 
 if (isNewArchitectureEnabled()) {
