--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@flyerhq/react-native-link-preview": "^1.6.0",
     "@harryy/react-native-content-loader": "^0.3.3",
+    "@pusher/pusher-websocket-react-native": "^1.1.1",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/netinfo": "^9.3.1",
     "@react-native-masked-view/masked-view": "^0.2.7",
@@ -33,7 +34,7 @@
     "deprecated-react-native-prop-types": "^2.3.0",
     "formik": "^2.2.9",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.7",
     "react-native-bootsplash": "^4.3.2",
     "react-native-device-info": "^10.2.1",
     "react-native-document-picker": "^8.1.2",
@@ -48,6 +49,7 @@
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.12.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
