--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,6 +5,13 @@ includeBuild('../node_modules/react-native-gradle-plugin')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 
+
+
+// added this for pusher
+include ':pusher-websocket-react-native'
+project(':pusher-websocket-react-native').projectDir = new File(rootProject.projectDir, '../../android')
+
+
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
     project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
