--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 # pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
 
-platform :ios, '12.4'
+platform :ios, '13.0'
 install! 'cocoapods', :deterministic_uuids => false
 
 production = ENV["PRODUCTION"] == "1"
@@ -38,5 +38,11 @@ target 'SimpuMobile' do
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+
+    installer.pods_project.targets.each do |target|
+      if target.name == "React-Core.common-AccessibilityResources"
+        target.remove_from_project
+      end
+    end
   end
 end
