--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,9 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
     ext {
+
+         googlePlayServicesVersion = "+" // default: "+"
+    firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
         buildToolsVersion = "31.0.0"
         minSdkVersion = 23
         // minSdkVersion = 21
@@ -26,6 +29,7 @@ buildscript {
         classpath('com.android.tools.build:gradle:7.2.1')
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
+        classpath 'com.google.gms:google-services:4.3.14'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
