--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,11 +1,11 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+# $RNFirebaseAsStaticFramework = true
+use_modular_headers!
+use_frameworks!
 
 
 
-#what i just added
-# pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
-pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
 
 platform :ios, '13.0'
 install! 'cocoapods', :deterministic_uuids => false
@@ -14,6 +14,7 @@ production = ENV["PRODUCTION"] == "1"
 
 target 'SimpuMobile' do
   config = use_native_modules!
+  # use_frameworks!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
@@ -24,7 +25,7 @@ target 'SimpuMobile' do
     :production => production,
     :hermes_enabled => flags[:hermes_enabled],
     :fabric_enabled => flags[:fabric_enabled],
-    :flipper_configuration => FlipperConfiguration.enabled,
+    # :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
     # :path => '../node_modules/react-native-linear-gradient'
@@ -39,10 +40,18 @@ target 'SimpuMobile' do
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
 
-    installer.pods_project.targets.each do |target|
-      if target.name == "React-Core.common-AccessibilityResources"
-        target.remove_from_project
-      end
-    end
+
+    # this was added and later commented out
+    
+    # installer.pods_project.targets.each do |target|
+    #   if target.name == "React-Core.common-AccessibilityResources"
+    #     target.remove_from_project
+    #   end
+    # end
   end
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
+pod 'pusher-websocket-react-native', :path => '../node_modules/@pusher/pusher-websocket-react-native'
+
 end
