--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@harryy/react-native-content-loader": "^0.3.3",
     "@pusher/pusher-websocket-react-native": "^1.1.1",
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-community/netinfo": "^9.3.1",
+    "@react-native-community/netinfo": "^9.3.6",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-firebase/app": "^16.4.6",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
@@ -40,13 +42,15 @@
     "react-native-document-picker": "^8.1.2",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-file-viewer": "^2.1.5",
-    "react-native-gesture-handler": "^2.6.0",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-htmlview": "^0.16.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pell-rich-editor": "^1.8.8",
+    "react-native-push-notification": "^8.1.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.12.0",
     "react-native-render-html": "^6.3.4",
