--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,6 +2,8 @@ rootProject.name = 'SimpuMobile'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
+
+
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 
@@ -10,6 +12,12 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 // added this for pusher
 include ':pusher-websocket-react-native'
 project(':pusher-websocket-react-native').projectDir = new File(rootProject.projectDir, '../../android')
+
+
+include ':react-native-notifications'
+project(':react-native-notifications').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-notifications/lib/android/app')
+
+
 
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
