--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,6 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-# $RNFirebaseAsStaticFramework = true
+$RNFirebaseAsStaticFramework = true
 use_modular_headers!
 use_frameworks!
 
@@ -12,9 +12,23 @@ install! 'cocoapods', :deterministic_uuids => false
 
 production = ENV["PRODUCTION"] == "1"
 
+pre_install do |installer|
+  Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
+
+  installer.pod_targets.each do |pod|
+    if pod.name.eql?('RNPermissions') || pod.name.start_with?('Permission-')
+      def pod.build_type;
+        # Uncomment the line corresponding to your CocoaPods version
+        Pod::BuildType.static_library # >= 1.9
+        # Pod::Target::BuildType.static_library # < 1.9
+      end
+    end
+  end
+end
+
+
 target 'SimpuMobile' do
   config = use_native_modules!
-  # use_frameworks!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
@@ -28,13 +42,29 @@ target 'SimpuMobile' do
     # :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
-    # :path => '../node_modules/react-native-linear-gradient'
+
   )
+
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+  pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
+  pod 'pusher-websocket-react-native', :path => '../node_modules/@pusher/pusher-websocket-react-native'
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+  pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
+  # pod 'react-native-notifications', :podspec => '../node_modules/react-native-notifications/react-native-notifications.podspec'
+
+
+  
+
 
   target 'SimpuMobileTests' do
     inherit! :complete
     # Pods for testing
+
   end
+
 
   post_install do |installer|
     react_native_post_install(installer)
@@ -49,9 +79,5 @@ target 'SimpuMobile' do
     #   end
     # end
   end
-
-  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
-pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer'
-pod 'pusher-websocket-react-native', :path => '../node_modules/@pusher/pusher-websocket-react-native'
 
 end
