--- a/ios/SimpuMobile/GoogleService-Info.plist
+++ b/ios/SimpuMobile/GoogleService-Info.plist
@@ -3,23 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>747079835412-adpkvhj4u30h381j33e9q1o8sldquqj2.apps.googleusercontent.com</string>
+	<string>253183524076-lb5dng48sh5v73im7tsuiklevbuqe4pg.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.747079835412-adpkvhj4u30h381j33e9q1o8sldquqj2</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>747079835412-vt992762oqi498rbpnjgejl83k0phlct.apps.googleusercontent.com</string>
+	<string>com.googleusercontent.apps.253183524076-lb5dng48sh5v73im7tsuiklevbuqe4pg</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDpGkCsLCsST8z8b067WLjgEgHDHkjqymc</string>
+	<string>AIzaSyDS6IGo2mpXAFXE-xUvkxYMEJywlndeqJw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>747079835412</string>
+	<string>253183524076</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>co.simpu.inbox</string>
 	<key>PROJECT_ID</key>
-	<string>simpugo-demo</string>
+	<string>simpu-f4a70</string>
 	<key>STORAGE_BUCKET</key>
-	<string>simpugo-demo.appspot.com</string>
+	<string>simpu-f4a70.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:747079835412:ios:ba9b456be42dcdbe292c01</string>
+	<string>1:253183524076:ios:33604deafacdf6f29ef9c9</string>
 </dict>
 </plist>
