--- a/ios/SimpuMobile/Info.plist
+++ b/ios/SimpuMobile/Info.plist
@@ -94,6 +94,12 @@
 		<string>Item 21</string>
 		<string>DMSans-Bold-Italic.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
