--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/netinfo": "^9.3.6",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/messaging": "^16.4.6",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
@@ -28,6 +29,7 @@
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-native-modern-datepicker": "^1.0.1",
+    "@types/react-native-push-notification": "^8.1.1",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "@ui-kitten/metro-config": "^5.1.2",
@@ -38,21 +40,26 @@
     "react": "18.0.0",
     "react-native": "0.69.7",
     "react-native-bootsplash": "^4.3.2",
-    "react-native-device-info": "^10.2.1",
+    "react-native-device-info": "^10.3.0",
     "react-native-document-picker": "^8.1.2",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-file-viewer": "^2.1.5",
+    "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-htmlview": "^0.16.0",
+    "react-native-hyperlink": "^0.0.22",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-imei": "^0.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-mime-types": "^2.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-notifications": "^4.3.3",
     "react-native-pell-rich-editor": "^1.8.8",
-    "react-native-push-notification": "^8.1.1",
+    "react-native-permissions": "^3.6.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "^2.12.0",
+    "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
@@ -63,6 +70,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
     "react-native-webview": "^11.23.1",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
@@ -78,6 +86,7 @@
     "@types/react-native": "^0.69.5",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.11",
+    "@types/react-native-video": "^5.0.14",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
