completed audio component

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -169,6 +169,10 @@ android {
                 }
             }
         }
+//just added this on 2oth dec 2022
+        configurations.all {
+            resolutionStrategy { force 'androidx.work:work-runtime:2.6.0' }
+        }
     }
 
     if (isNewArchitectureEnabled()) {
