--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,9 +9,9 @@ buildscript {
     firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
         buildToolsVersion = "31.0.0"
         minSdkVersion = 23
-        // minSdkVersion = 21
-        compileSdkVersion = 31
-        targetSdkVersion = 31
+        minSdkVersion = 21
+        compileSdkVersion = 33
+        targetSdkVersion = 33
 
 
         supportLibVersion = "23.1.1" // default: 23.1.1
@@ -27,6 +27,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+         jcenter()
     }
     dependencies {
         classpath('com.android.tools.build:gradle:7.2.1')
@@ -56,6 +57,7 @@ allprojects {
             }
         }
         google()
+         jcenter()
           maven { url 'https://maven.google.com' }
         maven { url 'https://www.jitpack.io' }
     }
