--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ui-kitten/eva-icons": "^5.1.2",
     "@ui-kitten/metro-config": "^5.1.2",
     "axios": "^0.27.2",
+    "azir-slider": "^1.0.1",
     "date-fns": "^2.29.2",
     "deprecated-react-native-prop-types": "^2.3.0",
     "formik": "^2.2.9",
@@ -50,7 +51,6 @@
     "react-native-htmlview": "^0.16.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-image-crop-picker": "^0.38.0",
-    "react-native-imei": "^0.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mime-types": "^2.3.0",
     "react-native-modal": "^13.0.1",
@@ -68,6 +68,7 @@
     "react-native-svg": "^13.1.0",
     "react-native-swipe-action-list": "^0.0.6",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-track-player": "^3.2.0",
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
