--- a/package.json
+++ b/package.json
@@ -38,19 +38,23 @@
     "date-fns": "^2.29.2",
     "deprecated-react-native-prop-types": "^2.3.0",
     "formik": "^2.2.9",
+    "pretty-bytes": "^6.0.0",
     "react": "18.0.0",
     "react-native": "0.69.7",
     "react-native-bootsplash": "^4.3.2",
+    "react-native-controlled-mentions": "^2.2.5",
     "react-native-device-info": "^10.3.0",
-    "react-native-document-picker": "^8.1.2",
+    "react-native-document-picker": "^8.1.3",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-file-viewer": "^2.1.5",
     "react-native-flash-message": "^0.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-htmlview": "^0.16.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mime-types": "^2.3.0",
     "react-native-modal": "^13.0.1",
@@ -65,10 +69,11 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
     "react-native-select-dropdown": "^3.0.1",
+    "react-native-sound": "^0.11.2",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.1.0",
     "react-native-swipe-action-list": "^0.0.6",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-track-player": "^3.2.0",
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
@@ -76,6 +81,7 @@
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
+    "rn-fetch-blob": "^0.12.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
