--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "rn-fetch-blob": "^0.12.0",
+    "string-to-color": "^2.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
