--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -275,6 +275,7 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.0" // Add this line
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
 implementation "androidx.appcompat:appcompat:1.0.0"
+ implementation project(':@react-native-camera-roll_camera-roll')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
