--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,6 +18,8 @@ include ':react-native-notifications'
 project(':react-native-notifications').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-notifications/lib/android/app')
 
 
+include ':@react-native-camera-roll_camera-roll'
+project(':@react-native-camera-roll_camera-roll').projectDir = new File(rootProject.projectDir, 	'../node_modules/@react-native-camera-roll/camera-roll/android')
 
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
