--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,8 +2,8 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 $RNFirebaseAsStaticFramework = true
 use_modular_headers!
-use_frameworks!
-
+# use_frameworks!
+use_frameworks! :linkage => :static
 
 
 
@@ -16,7 +16,8 @@ pre_install do |installer|
   Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
 
   installer.pod_targets.each do |pod|
-    if pod.name.eql?('RNPermissions') || pod.name.start_with?('Permission-')
+    # if pod.name.eql?('RNPermissions') || pod.name.start_with?('Permission-')
+    if pod.name.eql?('RNPermissions') || pod.name.start_with?('Permission-') || pod.name.eql?('vision-camera-code-scanner') || pod.name.eql?('VisionCamera') || pod.name.eql?('RNReanimated')
       def pod.build_type;
         # Uncomment the line corresponding to your CocoaPods version
         Pod::BuildType.static_library # >= 1.9
