--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.2.1",
     "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-native-community/blur": "^4.3.0",
     "@react-native-community/netinfo": "^9.3.6",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^16.5.2",
@@ -41,10 +42,13 @@
     "pretty-bytes": "^6.0.0",
     "react": "18.0.0",
     "react-native": "0.69.7",
+    "react-native-autogrow-textinput": "^5.4.0",
     "react-native-bootsplash": "^4.3.2",
+    "react-native-cheerio": "^1.0.0-rc.4",
     "react-native-controlled-mentions": "^2.2.5",
     "react-native-device-info": "^10.3.0",
     "react-native-document-picker": "^8.1.3",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-file-viewer": "^2.1.5",
     "react-native-flash-message": "^0.3.1",
@@ -56,6 +60,7 @@
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-mime-types": "^2.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -68,7 +73,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
-    "react-native-select-dropdown": "^3.0.1",
+    "react-native-share": "^8.1.0",
     "react-native-sound": "^0.11.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.1.0",
