--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "date-fns": "^2.29.2",
     "deprecated-react-native-prop-types": "^2.3.0",
     "formik": "^2.2.9",
+    "i": "^0.3.7",
+    "npm": "^9.4.2",
     "pretty-bytes": "^6.0.0",
     "react": "18.0.0",
     "react-native": "0.69.7",
@@ -48,14 +50,12 @@
     "react-native-controlled-mentions": "^2.2.5",
     "react-native-device-info": "^10.3.0",
     "react-native-document-picker": "^8.1.3",
-    "react-native-dropdown-picker": "^5.4.4",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-file-viewer": "^2.1.5",
     "react-native-flash-message": "^0.3.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-heic-converter": "^1.3.1",
-    "react-native-htmlview": "^0.16.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-zoom-viewer": "^3.0.1",
