--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-notifications": "^4.3.3",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-permissions": "^3.6.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
@@ -88,6 +89,7 @@
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "rn-fetch-blob": "^0.12.0",
+    "rn-placeholder": "^3.0.3",
     "string-to-color": "^2.2.2",
     "yup": "^0.32.11"
   },
