--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
